feat: add debezium code sample